Avoid routing problem in Github Page

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wangzhe3224.github.io/react-todo/",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
